设计模式：装饰器模式和单例模式